[package]
name = "music_presence"
version = "0.1.0"
edition = "2024"

[dependencies]
discord-rich-presence = "0.2.5"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync", "process"] }
urlencoding = "2.1.3"
